feat: db idx (#8)
* fix: tasks idx

* feat: analytics pagination and idx

* fix: pre-commit
